# qa_guru_python_9_18_hw

./: README.md  pyproject.toml
