[tool.poetry]
name = "new-poetry-project"
version = "0.1.0"
description = ""
authors = ["saritto <sara.nurtazaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.4.4"
selene = "2.0.0rc4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"